# jim-hill-r.github.io

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  index.html  install.sh  tailwind.config.js  tailwind.css
.cargo/: config.toml
.github/workflows/: nightly.yaml
app/: Cargo.toml
app/src/: app.rs  lib.rs
app/src/data/: user.rs
app/src/web/views/: todo.rs
assets/cms/: config.yml
assets/content/en/: test.md
assets/content/todo/: personal-branding.md
content/todo/: test.md
docs/: CNAME  index.html  jimhillr-github-io-1f4befafd00ba30b.js  jimhillr-github-io-1f4befafd00ba30b_bg.wasm  jimhillr-github-io-2ba952fa60fb89bb.js  jimhillr-github-io-2ba952fa60fb89bb_bg.wasm  jimhillr-github-io-2d6475b299560b8d.js  jimhillr-github-io-2d6475b299560b8d_bg.wasm  jimhillr-github-io-3f4a98791b1b3f5b.js  jimhillr-github-io-3f4a98791b1b3f5b_bg.wasm  jimhillr-github-io-518d4e636b533a13.js  jimhillr-github-io-518d4e636b533a13_bg.wasm  jimhillr-github-io-630ed929ffa1ad26.js  jimhillr-github-io-630ed929ffa1ad26_bg.wasm  jimhillr-github-io-70aa3c63914f0a22.js  jimhillr-github-io-70aa3c63914f0a22_bg.wasm  jimhillr-github-io-7fdc164fb18a8aa9.js  jimhillr-github-io-7fdc164fb18a8aa9_bg.wasm  jimhillr-github-io-b84f0c565d0cd2a9_bg.wasm  jimhillr-github-io-ba6d2254a40f8f09.js  jimhillr-github-io-ba6d2254a40f8f09_bg.wasm  jimhillr-github-io-cf5d49fb5aa6b30e.js  jimhillr-github-io-cf5d49fb5aa6b30e_bg.wasm  jimhillr-github-io-e4a45c442c6e42f7.js  jimhillr-github-io-e4a45c442c6e42f7_bg.wasm  jimhillr-github-io-f8a347ad4aa42856.js  jimhillr-github-io-f8a347ad4aa42856_bg.wasm  jimhillr-github-io-fab62ec1c02d7914.js  jimhillr-github-io-fbd0774ada503b1.js  jimhillr-github-io-fbd0774ada503b1_bg.wasm  manifest.json  tailwind-123bd15240c4f205.css  tailwind-40c82d12a2c3506.css  tailwind-822136f47daf2064.css  tailwind-92076488f325212.css  tailwind-a46c55d7af1f70e4.css  tailwind-d886b3fb3ccf907d.css  tailwind-dcd3c30e838d10f2.css  tailwind-f913c171317e94a9.css  tailwind-fb11bec28a3c28a0.css
docs/content-management/: config.yml
mpa/: Cargo.toml
mpa/src/: main.rs
public/: index.html  jimhillr-github-io-d674fbffd687db14.js  jimhillr-github-io-d674fbffd687db14_bg.wasm  manifest.json
public/content-management/: config.yml
spa/: Cargo.toml  build.rs  index.html  tailwind.config.js
spa/src/: main.rs
src/: app.rs  main.rs
src/views/: todo.rs
ssh/: Cargo.toml
ssh/src/: main.rs
ssr/: Cargo.toml
ssr/src/: main.rs
