[package]
name = "jimhillr-github-io"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
passionfruitdev = { version = "0", features = ["website"]}
leptos = { version = "0.5.2", features = ["csr"] }
include_dir = "0.7.3"
markdown = "1.0.0-alpha"
leptos_router = { version = "0.5.4", features = ["csr"] }

[build-dependencies]
webp = { version = "^0.2" }
image = { version = "^0.25.0" }

[package.metadata.bin]
cargo-run-script = { version = "^0.2" }
trunk = { version = "^0.19" }

[package.metadata.scripts]
dev-web = "cargo trunk serve --port 11984"
build-web = "cargo trunk build && rm -rf docs && mv dist docs"
