[workspace]
members = [
    "app",
    "mpa",
    "spa",
    "ssh",
    "ssr"
]
resolver = "2"

[workspace.metadata.bin]
cargo-run-script = { version = "^0.2" }
cargo-leptos = { version = "^0.2" }
trunk = { version = "^0.20" }

[workspace.metadata.scripts]
dev-web = "cargo do dev-web-spa"
dev-web-mpa = "echo 'todo'"
dev-web-spa = "cd spa && cargo do dev"
dev-web-ssh = "echo todo"
dev-web-ssr = "cd ssr && cargo do dev"
build-web = "cargo do build-web-spa"
build-web-spa = "cd spa && cargo do build && cd .. && rm -rf docs && mv spa/dist docs"
build-web-ssr = "cd ssr && cargo do build"

[workspace.metadata.leptos]
output-name = "jim-hill-r"
site-root = "dist"
assets-dir = "asset"
tailwind-input-file = "assets/styles/tailwind.css"
browserquery = "defaults"
site-addr = "127.0.0.1:11984"
reload-port = 11983
env = "DEV"
lib-profile-release = "wasm-release"
lib-package="app"
bin-package="ssr"