[package]
name = "app"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
gloo-net = { version = "0.2", features = ["http"] }
http = { version = "1.0.0", optional = true }
include_dir = "^0.7"
leptos = "0.6"
leptos_actix = { version = "0.6", optional = true }
leptos_meta = "0.6"
leptos_router = "0.6"
log = "0.4"
markdown = "1.0.0-alpha"
simple_logger = { version = "4.0", optional = true }
wasm-bindgen = { version = "=0.2.92", optional = true }