[package]
name = "jimhillr-github-io"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
app = { path = "../app" }
console_error_panic_hook = { version = "0.1" }
console_log = { version = "1" }
leptos = { version = "0.6", features = ["nightly", "csr"] }
leptos_actix = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", features = ["nightly", "csr"] }
leptos_router = { version = "0.6", features = ["nightly", "csr"] }
log = "0.4"
wasm-bindgen = { version = "=0.2.92" }

[build-dependencies]
webp = { version = "^0.3" }
image = { version = "^0.25" }

[package.metadata.scripts]
dev = "cargo trunk serve --port 11984"
build = "cargo trunk build"